fixing spacing and link underlining

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@
   box-sizing: border-box;
 }
 
-a { text-decoration: none;
+a { text-decoration: underline;
     color: inherit; }
 
 li { list-style: none; }
